2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* configure.in: [Bug 3593146]: Extended with CYGPATH usage to
	  allow building under cygwin.
	* configure: Regenerated (autoconf 2.67).

2012-08-07  Andreas Kupries  <andreask@activestate.com>

	* modules/generator: Generators (via the coroutines of
	  Tcl 8.6). Provided by Neil Madden.
	* support/installation/modules.tcl:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-11-07  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (xcopy): Fixed bug a preventing the detection of files
	  in subdirectories; copied from the installer.
	* sak.tcl (ipackages): Fixed bug (reuse of varname) which placed
	  packages into the wrong module.

2011-05-31  Andreas Kupries  <andreask@activestate.com>

	* New module and package: oo::util. Right now only easy
	  referencing of instance methods for callbacks.

	* New module and package: lambda. Easy anonymous procedures for
	  Tcl 8.5+.

	* New module and package: try. Tcl 8.5+ forward compatibility
	  implementation of try/catch/finally (TIP 329).

2011-04-21  Andreas Kupries  <andreask@activestate.com>

	* modules/struct/queue_c.tcl: Disabled the critcl debug settings used
	* modules/pt/pt_rdengine_c.tcl: to work around bugs in critcl v2's
	* modules/pt/pt_parse_peg_c.tcl: handling of C companion files.
	* modules/pt/pt_cparam_config_critcl.tcl:

	* sak.tcl (__critcl): Fixed processing of -debug, added the
	  forgotten handling of its argument. Plus added handling of
	  option -target.

	* ./modules/sha1/sha256.h: Fixed the conditional definition of
	  uint64_t and uint32_t for aix and hpux machines.

2011-04-06  Andreas Kupries  <andreask@activestate.com>

	* modules/valtype: New module: Validation types. snit validation
	  types for various classes of numbers (ISBN, EAN, ...) and
	  general check-digit algorithms (luhn(5), verhoeff, ...).
